--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.50.5",
 		"sass": "^1.89.2"
 	}
