--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 	"dependencies": {
 		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.50.5",
-		"sass": "^1.89.2"
+		"@svelte-put/clickoutside": "^4.0.0",
+		"sass": "^1.89.2",
+		"svelte-outside": "^0.0.3"
 	}
 }
